# Spectral_Display_GUI

./: .gitignore  .gitmodules  .qmlformat.ini  CMakeLists.txt  CMakePresets.json  GIT komendy.txt  Mentoring QT project.codeworkspace.code-workspace  README.md  main.cpp  vscode_qt.bat
BasicGUI/: CMakeLists.txt  DataManager.cpp  DataManager.h  Data_Input.qml  FileManager.cpp  FileManager.h  ImageViewer.cpp  ImageViewer.h  Interpolation.cpp  Interpolation.h  Interpolator.cpp  Interpolator.h  LedMatrix.cpp  LedMatrix.h  LedRuler.cpp  LedRuler.h  Led_Matrix.cpp  Led_Matrix.h  PieChart.cpp  PieChart.h  PixelPlot.qml  Plot.qml  TcolorPicker.cpp  TcolorPicker.h  Transformation.cpp  Transformation.h  Ttransform.cpp  Ttransform.h  VectorPlot.qml  main.cpp  main.qml  main_sec.cpp  piechart.cpp  piechart.h  qml.qrc
BasicGUI/QMLSources/: ControlPanel.qml  DataInput.qml  DrawPanel.qml  ImagePanel.qml  PixelPlot.qml  RenderPanel.qml  RenderSelector.qml  SystemInfo.qml  TransformatedPreview.qml  main.qml  qml.qrc
BasicGUI/QML_sources/: main.qml
BasicGUI/Src/: FileManager.cpp  FileManager.h  LedRuler.cpp  LedRuler.h  LedRuler.hpp  RenderSelector.cpp  RenderSelector.h  cpu_load_monitor.cpp  cpu_load_monitor.h  main.cpp  ram_usage_monitor.cpp  ram_usage_monitor.h  system_telemetry.cpp  system_telemetry.h
BasicGUI/includes/: FileManager.h  LedRuler.h
BasicGUI/src/: FileManager.cpp  FileManager.hpp  LedRuler.cpp  LedRuler.hpp  main.cpp
Benchmark/: CMakeLists.txt  main.cpp
Benchmark/BenchmarkLibrary/: CMakeLists.txt  MeasurementTools.cpp  MeasurementTools.hpp  main.cpp
Benchmark/BenchmarkLibrary/public/: BenchmarkMeasuredTask.hpp
Benchmark/QPolygonBenchmark/: CMakeLists.txt  QPolygonTask.cpp  QPolygonTask.hpp
Benchmark/SinglePointBenchmark/: CMakeLists.txt  SinglePointTask.cpp  SinglePointTask.hpp
ImageTransform/CommonPart/: CMakeLists.txt
ImageTransform/CommonPart/base_interpol/: CMakeLists.txt  InterpolatorBase.cpp
ImageTransform/CommonPart/includes/: ColorCalc.h  Constants.h  Transformation.h
ImageTransform/CommonPart/src/: ColorCalc.cpp  ColorCalc.hpp  Constants.hpp  Interpolator.cpp  Transformation.cpp  Transformation.hpp
ImageTransform/CommonPart/transform/: CMakeLists.txt  ColorCalc.cpp  Constants.hpp  Transformation.hpp
ImageTransform/CommonPart/unitTests/: CMakeLists.txt
ImageTransform/CommonPart/unit_tests/: CMakeLists.txt  UnitTestCommonPart.cpp  Unit_Test_CommonPart_lib.cpp
ImageTransform/QPolygonTransform/: CMakeLists.txt
ImageTransform/QPolygonTransform/includes/: Interpolator.h  InterpolatorQPoly.h
ImageTransform/QPolygonTransform/src/: Interpolator.cpp  InterpolatorQPoly.cpp  InterpolatorQPoly.hpp
ImageTransform/QPolygonTransform/unit_tests/: CMakeLists.txt  CommonTests.hpp  InterpolatorTest.cpp  QPolygonTransform_libTest.cpp  TransformationTest.cpp  UnitTestColorInterpolation.cpp  UnitTestQPolygonTransform.cpp  UnitTestTransformation.cpp  Unit_test_ColorInterpolation.cpp  Unit_test_Interpolator.cpp  Unit_test_QPolygonTransform.cpp  Unit_test_Transformation.cpp
ImageTransform/SinglePointTransform/: CMakeLists.txt
ImageTransform/SinglePointTransform/includes/: Interpolator.h  InterpolatorSingle.h
ImageTransform/SinglePointTransform/src/: Interpolator.cpp  InterpolatorSingle.cpp  InterpolatorSingle.hpp
ImageTransform/SinglePointTransform/unit_tests/: CMakeLists.txt  UnitTestSinglePointTransform.cpp  Unit_Test_SinglePointTransform_lib.cpp
Interpolator_lib/: CMakeLists.txt  Transformation.cpp
PluginConcept/: CMakeLists.txt  main.cpp  pluginA_code.cpp  pluginB_code.cpp  plugin_api.h  plugin_api_helpers.h  plugin_functions.h
PointsInPolygon/: CMakeLists.txt  Polygon.cpp  Polygon.h  main.cpp
PointsInPolygon/QMLSources/: ControlPanel.qml  DrawPanel.qml  main.qml
QPolygonTransform_lib/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  Transformation.cpp
QPolygonTransform_lib/src/: CMakeLists.txt  Interpolator.cpp  Interpolator.h  Transformation.cpp  Transformation.h
QPolygonTransform_lib/unit_tests/: CMakeLists.txt  ColorInterpolationTest.cpp  InterpolatorTest.cpp  QPolygonTransform_libTest.cpp  TransformationTest.cpp
SinglePointTransform_lib/unit_tests/: CMakeLists.txt  SinglePointTransform_libTest.cpp
Tests/: CMakeLists.txt  InterpolatorTest.cpp
Transform_algorythms/QPolygonTransform/: CMakeLists.txt
Transform_algorythms/QPolygonTransform/includes/: Interpolator.h  Transformation.h
Transform_algorythms/QPolygonTransform/src/: Transformation.cpp
Transform_algorythms/QPolygonTransform/unit_tests/: CMakeLists.txt  ColorInterpolationTest.cpp  InterpolatorTest.cpp  QPolygonTransform_libTest.cpp  TransformationTest.cpp
Transform_liraries/SinglePointTransform_lib/: CMakeLists.txt
Transform_liraries/SinglePointTransform_lib/include/: Interpolator.h  Transformation.h
Transform_liraries/SinglePointTransform_lib/src/: Interpolator.cpp  Interpolator.h  Transformation.cpp  Transformation.h
Transform_liraries/SinglePointTransform_lib/unit_tests/: CMakeLists.txt  SinglePointTransform_libTest.cpp
Transform_liraries/Utils_lib/: CMakeLists.txt
basic_gui/: CMakeLists.txt
basic_gui/QMLSources/: ControlPanel.qml  DataInput.qml  DisplayRender.qml  RenderEmulator.qml  RenderPanel.qml  RenderSelector.qml  TransformedPreview.qml  main.qml  qml.qrc
basic_gui/src/: DisplayRender.cpp  DisplayRender.hpp  FileManager.cpp  FileManager.hpp  LedRuler.cpp  LedRuler.hpp  RenderSelector.cpp  RenderSelector.hpp  TransformedPreview.cpp  TransformedPreview.hpp  main.cpp
benchmart_test/QPolygonBenchmark/: CMakeLists.txt
documentation/: CMakeLists.txt  Doxyfile.in  read.me
documentation/architecture/: ClassHierarchy.drawio
documentation/qml_example/: CMakeLists.txt
googletest_utils/: CMakeLists.txt
googletest_utils/includes/: CommonTests.hpp  CommonTestsImpl.hpp
googletest_utils/src/: mainTests.cpp
gui_with_threading/: CMakeLists.txt
gui_with_threading/QMLSources/: main.qml
gui_with_threading/Src/: Controller.cpp  Controller.h  main.cpp
main/app/: CMakeLists.txt
main/app/qml/: main.qml  (+9 more)
tests/unit_tests/: CMakeLists.txt
(+406 files in other folders)
